# ibs_test

./: .dockerignore  .env.example  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
app/: app.py  config.py  database.py  exceptions.py  models.py
app/depedinces/: auth_depends.py
app/migrations/: env.py
app/migrations/versions/: 15670b71166c_.py  2488d7e0ffd8_initial_migration.py  2c72efad947b_.py  2edf825fe9f3_.py  59bb90932b10_.py  5d79edc7b4c9_.py  cc63177b0412_.py  e551ba596dcf_.py
app/repositories/: admin_repository.py  chat_repository.py  message_repository.py  user_reposotory.py
app/routers/: admin_router.py  chat_router.py  page_router.py  websocket_router.py
app/schemas/: admin_schema.py  chat_schema.py  user_schema.py
app/services/: admin_service.py  bot_service.py  chat_service.py  connection_service.py
app/templates/: enter.html  main.html  registration.html  try_again.html
